<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/pizza"
    tools:context=".MainActivity">

    <RadioGroup
        android:id="@+id/tamaño"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.27"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.379">

        <RadioButton
            android:id="@+id/rbPequena"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#FBF6F6"
            android:fontFamily="sans-serif-black"
            android:onClick="radioClicked"
            android:text="Pequeña"
            android:textColor="@color/white"
            android:textColorLink="@color/white" />

        <RadioButton
            android:id="@+id/rbMediana"
            android:layout_width="109dp"
            android:layout_height="52dp"
            android:layout_marginBottom="20dp"
            android:buttonTint="#FDFCFC"
            android:fontFamily="sans-serif-black"
            android:onClick="radioClicked"
            android:text="Mediana"
            android:textColor="@color/white" />

        <RadioButton
            android:id="@+id/rbGrande"
            android:layout_width="137dp"
            android:layout_height="48dp"
            android:fontFamily="sans-serif-black"
            android:onClick="radioClicked"
            android:text="Grande"
            android:textColor="@color/white" />
    </RadioGroup>

    <CheckBox
        android:id="@+id/cbQueso"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-black"
        android:onClick="onCheckboxClicked"
        android:text="  Queso-$2.00"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.858"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.828" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="244dp"
        android:layout_height="44dp"
        android:background="#FFC107"
        android:text="@string/Pizzeria"
        android:textAlignment="center"
        android:textColor="#2F2447"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.544"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.065" />

    <CheckBox
        android:id="@+id/cbJamon"
        android:layout_width="128dp"
        android:layout_height="51dp"
        android:fontFamily="sans-serif-black"
        android:onClick="onCheckboxClicked"
        android:text="Jamon-$1.50"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/cbQueso"
        app:layout_constraintHorizontal_bias="0.206"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.833" />

    <CheckBox
        android:id="@+id/cbHongos"
        android:layout_width="145dp"
        android:layout_height="51dp"
        android:fontFamily="sans-serif-black"
        android:onClick="onCheckboxClicked"
        android:text="Hongos-$2.50"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.932"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.722" />

    <CheckBox
        android:id="@+id/cbPepe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-black"
        android:onClick="onCheckboxClicked"
        android:text="Peperoni-$3.00"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.179"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.628" />

    <CheckBox
        android:id="@+id/cbPollo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-black"
        android:onClick="onCheckboxClicked"
        android:text="Pollo-$2.00"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.885"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.625" />

    <CheckBox
        android:id="@+id/cbPiña"
        android:layout_width="114dp"
        android:layout_height="53dp"
        android:fontFamily="sans-serif-black"
        android:text="Piña-$2.00"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.168"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.724" />

    <CheckBox
        android:id="@+id/cbCarne"
        android:layout_width="138dp"
        android:layout_height="52dp"
        android:fontFamily="sans-serif-black"
        android:onClick="onCheckboxClicked"
        android:text="carne-$3.00"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.548"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.909" />

    <TextView
        android:id="@+id/txtTamaño"
        android:layout_width="268dp"
        android:layout_height="36dp"
        android:background="#03A9F4"
        android:fontFamily="sans-serif-black"
        android:text="@string/Tamaño"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.636"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.241" />

    <TextView
        android:id="@+id/txtIngredientes"
        android:layout_width="403dp"
        android:layout_height="44dp"
        android:layout_marginTop="395dp"
        android:layout_marginBottom="244dp"
        android:background="#03A9F4"
        android:fontFamily="sans-serif-black"
        android:text="@string/Ingredientes"
        android:textAlignment="center"
        android:textColor="#0F421B"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/total"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.564" />

    <TextView
        android:id="@+id/txtCliente"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-black"
        android:text="@string/Ingrese_su_Nombre"
        android:textColor="@color/teal_700"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.14" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="68dp"
        android:layout_height="17dp"
        android:fontFamily="sans-serif-black"
        android:text="$4.00"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.723"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.319" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="62dp"
        android:layout_height="26dp"
        android:fontFamily="sans-serif-black"
        android:text="$10.00"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.71"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.4" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-black"
        android:text="$20.00"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.675"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.478" />

    <TextView
        android:id="@+id/total"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="60dp"
        android:layout_marginBottom="4dp"
        android:background="#FFFFFF"
        android:backgroundTint="@color/purple_200"
        android:text="total pagar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/cbCarne"
        app:layout_constraintTop_toBottomOf="@+id/txtIngredientes" />

    <EditText
        android:id="@+id/nombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        android:textColor="@color/teal_200"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.582"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.173" />

    <Button
        android:id="@+id/btnSiguiente"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Boton_Siguiente"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.994" />

</androidx.constraintlayout.widget.ConstraintLayout>